# rally-contrail

./: .coveragerc  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
contrail/: credential.py  scenario.py
contrail/context/: existing_users.py  projects.py
contrail/scenarios/config/: utils.py  virtual_network.py
rally_contrail/: __init__.py  credential.py  scenario.py
rally_contrail/context/: existing_users.py  projects.py
rally_contrail/scenarios/config/: utils.py  virtual_network.py
samples/deployments/: contrail.json
samples/plugins/scenario/: test_create_and_list_virtual_networks.yaml  test_create_and_list_virtual_networks_for_debug.yaml
tests/unit/: test_credential.py
