[metadata]
name = rally-contrail
summary = Rally plugins for Contrail platform
description-file =
    README.rst
author = Contrail
author-email = openstack-discuss@lists.contrail.org
home-page = https://docs.openstack.org/rally/latest/
license = Apache License, Version 2.0
classifier =
    Environment :: Contrail
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    rally_contrail

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
rally_plugins =
    path = rally_contrail
    options = rally_contrail.cfg.opts:list_opts
